src/c-lib/gs1encoders.h


typedef enum gs1_encoder_symbologies gs1_encoder_symbologies_t;
typedef enum gs1_encoder_validations gs1_encoder_validations_t;
typedef struct gs1_encoder gs1_encoder;
GS1_ENCODERS_API char* gs1_encoder_getVersion(void);
GS1_ENCODERS_API GS1_ENCODERS_DEPRECATED gs1_encoder* gs1_encoder_init(void *mem);
GS1_ENCODERS_API char* gs1_encoder_getErrMsg(gs1_encoder *ctx);
GS1_ENCODERS_API char* gs1_encoder_getErrMarkup(gs1_encoder *ctx);
GS1_ENCODERS_API gs1_encoder_symbologies_t gs1_encoder_getSym(gs1_encoder *ctx);
GS1_ENCODERS_API bool gs1_encoder_setSym(gs1_encoder *ctx, gs1_encoder_symbologies_t sym);
GS1_ENCODERS_API bool gs1_encoder_getAddCheckDigit(gs1_encoder *ctx);
GS1_ENCODERS_API bool gs1_encoder_setAddCheckDigit(gs1_encoder *ctx, bool addCheckDigit);
GS1_ENCODERS_API bool gs1_encoder_getPermitUnknownAIs(gs1_encoder *ctx);
GS1_ENCODERS_API bool gs1_encoder_setPermitUnknownAIs(gs1_encoder *ctx, bool permitUnknownAIs);
GS1_ENCODERS_API bool gs1_encoder_getPermitZeroSuppressedGTINinDLuris(gs1_encoder *ctx);
GS1_ENCODERS_API bool gs1_encoder_setPermitZeroSuppressedGTINinDLuris(gs1_encoder *ctx, bool permitZeroSuppressedGTINinDLuris);
GS1_ENCODERS_API bool gs1_encoder_getIncludeDataTitlesInHRI(gs1_encoder *ctx);
GS1_ENCODERS_API bool gs1_encoder_setIncludeDataTitlesInHRI(gs1_encoder *ctx, bool includeDataTitles);
GS1_ENCODERS_API bool gs1_encoder_getValidationEnabled(gs1_encoder *ctx, gs1_encoder_validations_t validation);
GS1_ENCODERS_API bool gs1_encoder_setValidationEnabled(gs1_encoder *ctx, gs1_encoder_validations_t validation, bool enabled);
GS1_ENCODERS_API char* gs1_encoder_getDataStr(gs1_encoder *ctx);
GS1_ENCODERS_API bool gs1_encoder_setDataStr(gs1_encoder *ctx, const char *dataStr);
GS1_ENCODERS_API bool gs1_encoder_setAIdataStr(gs1_encoder *ctx, const char *dataStr);
GS1_ENCODERS_API char* gs1_encoder_getAIdataStr(gs1_encoder *ctx);
GS1_ENCODERS_API char* gs1_encoder_getDLuri(gs1_encoder *ctx, const char *stem);
GS1_ENCODERS_API bool gs1_encoder_setScanData(gs1_encoder* ctx, const char *scanData);
GS1_ENCODERS_API char* gs1_encoder_getScanData(gs1_encoder* ctx);
GS1_ENCODERS_API int gs1_encoder_getHRI(gs1_encoder* ctx, char ***hri);
GS1_ENCODERS_API int gs1_encoder_getDLignoredQueryParams(gs1_encoder* ctx, char ***qp);
GS1_ENCODERS_API void gs1_encoder_free(gs1_encoder *ctx);